---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: integer overflow at `a`
  ┌─ integer_range_negative:1:5
  │
1 │ a = -170141183460469231731687303715884105729
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid integer: integer overflow


error: invalid integer: integer overflow at `a`
 --> integer_range_negative:1:5
  |
1 | a = -170141183460469231731687303715884105729
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid integer: integer overflow
Error {
    kind: "InvalidInteger",
    message: "invalid integer: integer overflow",
    span: 4..44,
    path: Some(
        "a",
    ),
}
